--- a/Assignment2/css/style.css
+++ b/Assignment2/css/style.css
@@ -138,3 +138,57 @@ section > .container{
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
 }
+.box-job-info {
+    padding: 30px;
+    border: 1px solid gainsboro;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+.title-job-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.title-job-info h2 {
+    font-size: 24px;
+    font-weight: 500;
+}
+.title-job-info i{
+    font-size: 30px;
+    color: rgb(94, 94, 91);
+}
+.list-job-info {
+    list-style: none;
+    margin-left: 20px;
+}
+.name-company {
+    font-weight: 600;
+}
+.time-company {
+    font-size: 13px;
+    margin: 8px 0;
+}
+.list-job-info .now {
+    background-color: #0079bc;
+    padding: 2px 10px;
+    font-size: 13px;
+    display: inline-block;
+    color: white;
+    border-radius: 10px;
+}
+.list-job-info li {
+    font-size: 16px;
+    color: rgb(94, 94, 91);
+}
+.list-job-info li::before {
+    content: '';
+    display: inline-block;
+    width: 8px;
+    position: relative;
+    height: 8px;
+    left: -25px;
+    top: 20px;
+    background-color: #0079bc;
+    border-radius: 100%;
+}
