--- a/Assignment2/css/style.css
+++ b/Assignment2/css/style.css
@@ -6,7 +6,9 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
 }
-
+img {
+    width: 100%;
+}
 .bg-grey {
     background: #f7f7f7;
 }
@@ -81,6 +83,19 @@ section > .container{
     margin-left: 10px;
     font-size: 12px;
     color: #199cdb;
+}
+.avatar {
+    display: inline-block;
+    position: relative;
+}
+.avatar img {
+    position: absolute;
+    width: 150px;
+    border: 5px solid whitesmoke;
+    border-radius: 100%;
+    top: -81px;
+    left: -24px;
+    height: 150px;
 }
 /* about */
 #about .container {
