--- a/Lab11/css/Lab11.1.css
+++ b/Lab11/css/Lab11.1.css
@@ -73,6 +73,8 @@ label {
     width: 100%;
     height: 38px;
     padding: 6px 12px;
+    font-weight: 500;
+    font-size: 18px;
     color: #495057;
     background-color: #fff;
     background-clip: padding-box;
@@ -96,7 +98,7 @@ label {
 
 ::placeholder {
     color: #495057;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .input-radio,
@@ -128,26 +130,24 @@ button {
     border-radius: 2px;
     cursor: pointer;
 }
-/* .inputs-item::placeholder {
+option {
     color: #495057;
-    font-size: 16px;
-}  */
+    font-size: 18px;
+} 
 select:required:invalid {
     color: #495057;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 
-
-
-@media (min-width: 768px) {
-    .container-survey-form {
-        max-width: 720px;
-    }
-}
 
 @media (min-width: 576px) {
     .container-survey-form {
         max-width: 540px;
+    }
+}
+@media (min-width: 768px) {
+    .container-survey-form {
+        max-width: 720px;
     }
 }
